# jerryib_trader

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
frontend/src/: App.tsx
src/DataSupply/: polygon_manager.py  replayer_manager.py  simulator_manager.py  thetadata_manager.py
src/IBBot/: ROADMAP.md  main.py
src/IBBot/adapter/: app.py  ib_gateway_test.py
src/IBBot/models/: contract.py
src/IBGateway/: app.py  client.py  contract.py  historical_data.py  ib_gateway.py  main.py  options_historical.py  order.py  utils.py  wrapper.py
src/OrderBook/: main.py  polygon_manager.py  server.py
src/utils/: config.py  logger.py
tests/: test_thetadata_debug.py  test_thetadata_manager.py  test_unified_api.py
