[project]
name = "jerryib_trade"
version = "0.1.0"
description = ""
authors = [
    {name = "JerryHong",email = "huntcamilla06@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "ib-insync (>=0.9.86,<0.10.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "polars (>=1.34.0,<2.0.0)",
    "polygon-api-client (>=1.16.2,<2.0.0)",
    "fastapi (>=0.120.1,<0.121.0)"
]

[tool.poetry]
packages = [{include = "*", from = "src"}]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
pytest = "^8.4.1"
commitizen = "^4.9.1"


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
